--- a/examples/sales_agent_with_context.ipynb
+++ b/examples/sales_agent_with_context.ipynb
@@ -250,7 +250,7 @@
    "source": [
     "# test the intermediate chains\n",
     "verbose=True\n",
-    "llm = ChatOpenAI(model='gpt-4-turbo-preview',temperature=0.9, openai_api_key=os.getenv(\"OPENAI_API_KEY\"))\n",
+    "llm = ChatOpenAI(model='gpt-4o-mini',temperature=0.9, openai_api_key=os.getenv(\"OPENAI_API_KEY\"))\n",
     "\n",
     "stage_analyzer_chain = StageAnalyzerChain.from_llm(llm, verbose=verbose)\n",
     "\n",
@@ -564,7 +564,7 @@
     "    \"\"\"\n",
     "    prompt+='{'\n",
     "    response = completion(\n",
-    "        model=os.getenv(\"GPT_MODEL\", \"gpt-3.5-turbo-1106\"),\n",
+    "        model=os.getenv(\"GPT_MODEL\", \"gpt-4o-mini-1106\"),\n",
     "        messages=[{\"content\": prompt, \"role\": \"user\"}],\n",
     "        max_tokens=1000,\n",
     "        temperature=0\n",
