--- a/examples/sales_agent_with_context.ipynb
+++ b/examples/sales_agent_with_context.ipynb
@@ -432,10 +432,10 @@
     "Price: $2,599\n",
     "Sizes available for this product: King\n",
     "\"\"\"\n",
-    "with open('sample_product_catalog.txt', 'w') as f:\n",
+    "with open('sample_product_catalog.json', 'w') as f:\n",
     "    f.write(sample_product_catalog)\n",
     "\n",
-    "product_catalog='sample_product_catalog.txt'"
+    "product_catalog='sample_product_catalog.json'"
    ]
   },
   {
@@ -496,7 +496,7 @@
     }
    ],
    "source": [
-    "knowledge_base = setup_knowledge_base('sample_product_catalog.txt')\n",
+    "knowledge_base = setup_knowledge_base('sample_product_catalog.json')\n",
     "knowledge_base.run('What products do you have available?')"
    ]
   },
@@ -1024,7 +1024,7 @@
     "conversation_type=\"call\",\n",
     "conversation_stage = conversation_stages.get('1', \"Introduction: Start the conversation by introducing yourself and your company. Be polite and respectful while keeping the tone of the conversation professional.\"),\n",
     "use_tools=True,\n",
-    "product_catalog=\"sample_product_catalog.txt\"\n",
+    "product_catalog=\"sample_product_catalog.json\"\n",
     ")"
    ]
   },
